[gd_scene load_steps=47 format=2]

[ext_resource path="res://GameHUDRelated/BottomPanelBackground.png" type="Texture" id=1]
[ext_resource path="res://GameHUDRelated/StatsPanel/GeneralStatsPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://GameHUDRelated/BuySellPanel/BuySellLevelRollPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameElementsRelated/GameElements.gd" type="Script" id=5]
[ext_resource path="res://GameHUDRelated/AlmanacButtonPanel/AlmanacButtonPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameElementsRelated/TowerInventoryRelated/TowerInventoryBench.tscn" type="PackedScene" id=7]
[ext_resource path="res://GameElementsRelated/TowerManager.gd" type="Script" id=8]
[ext_resource path="res://GameElementsRelated/CombinationManager.gd" type="Script" id=9]
[ext_resource path="res://GameHUDRelated/CombinationRelatedPanels/CombinationTopPanel/CombinationTopPanel.tscn" type="PackedScene" id=10]
[ext_resource path="res://GameHUDRelated/LeftSidePanel/LeftPanel.tscn" type="PackedScene" id=11]
[ext_resource path="res://GameElementsRelated/SynergyManager.gd" type="Script" id=12]
[ext_resource path="res://GameElementsRelated/SharedPassiveManager.gd" type="Script" id=13]
[ext_resource path="res://GameHUDRelated/BottomPanel/IngredientModeNotifiyPanel.png" type="Texture" id=14]
[ext_resource path="res://GameElementsRelated/InnerBottomPanel.gd" type="Script" id=15]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RightSidePanel.tscn" type="PackedScene" id=16]
[ext_resource path="res://GameHUDRelated/BuySellPanel/SellPanel.tscn" type="PackedScene" id=17]
[ext_resource path="res://GameElementsRelated/GoldManager.gd" type="Script" id=18]
[ext_resource path="res://GameElementsRelated/StageRoundManager.gd" type="Script" id=19]
[ext_resource path="res://GameElementsRelated/HealthManager.gd" type="Script" id=20]
[ext_resource path="res://GameElementsRelated/EnemyManager.gd" type="Script" id=21]
[ext_resource path="res://GameElementsRelated/AbilityManager.gd" type="Script" id=22]
[ext_resource path="res://GameElementsRelated/InputPromptManager.gd" type="Script" id=23]
[ext_resource path="res://GameHUDRelated/NotificationPanel/SelectionNotifPanel/SelectionNotifPanel.tscn" type="PackedScene" id=24]
[ext_resource path="res://GameElementsRelated/ScreenEffectsManager.gd" type="Script" id=25]
[ext_resource path="res://GameHUDRelated/SynergyPanel/SynergyInteractablePanel.tscn" type="PackedScene" id=26]
[ext_resource path="res://GameElementsRelated/WholeScreenGUI.gd" type="Script" id=27]
[ext_resource path="res://GameElementsRelated/RelicManager.gd" type="Script" id=28]
[ext_resource path="res://GameElementsRelated/ShopManager.gd" type="Script" id=29]
[ext_resource path="res://GameElementsRelated/LevelManager.gd" type="Script" id=30]
[ext_resource path="res://GameHUDRelated/NotificationPanel/TowerEmptySlotNotifPanel/TowerEmptySlotNotifPanel.tscn" type="PackedScene" id=31]
[ext_resource path="res://GameElementsRelated/MapManager.gd" type="Script" id=32]
[ext_resource path="res://GameElementsRelated/GameResultManager.gd" type="Script" id=33]
[ext_resource path="res://GameHUDRelated/NotificationPanel/GenericPanel/GenericNotifPanel.tscn" type="PackedScene" id=34]
[ext_resource path="res://GameElementsRelated/PauseManager.tscn" type="PackedScene" id=35]
[ext_resource path="res://GameElementsRelated/GameModifiersManager.gd" type="Script" id=36]
[ext_resource path="res://GameHUDRelated/NotificationPanel/TutorialPanel/TutorialNotifPanel.tscn" type="PackedScene" id=37]
[ext_resource path="res://GameElementsRelated/OtherNodeHoster.gd" type="Script" id=38]
[ext_resource path="res://GameElementsRelated/ProjHoster.gd" type="Script" id=39]
[ext_resource path="res://GameElementsRelated/BelowScreenEffectsNodeHoster.gd" type="Script" id=40]
[ext_resource path="res://GameElementsRelated/GameStatsManager.gd" type="Script" id=41]
[ext_resource path="res://GameHUDRelated/GameStatsPanel/shared/Assets/AbsorbIcon_20x20.png" type="Texture" id=42]
[ext_resource path="res://GameInfoRelated/TerrainRelated/FOV.gd" type="Script" id=43]
[ext_resource path="res://MiscRelated/GUI_Category_Related/ColorWheelGUI/ColorWheelGUI.tscn" type="PackedScene" id=44]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 3 )

[node name="GameElements" type="Node"]
script = ExtResource( 5 )

[node name="FOVNode" type="Node2D" parent="."]
script = ExtResource( 43 )

[node name="MapManager" type="Node" parent="."]
script = ExtResource( 32 )

[node name="TowerInventoryBench" parent="." instance=ExtResource( 7 )]
position = Vector2( 475, 410 )

[node name="TowerManager" type="Node" parent="."]
script = ExtResource( 8 )

[node name="SynergyManager" type="Node" parent="."]
script = ExtResource( 12 )

[node name="GoldManager" type="Node" parent="."]
script = ExtResource( 18 )

[node name="RelicManager" type="Node" parent="."]
script = ExtResource( 28 )

[node name="HealthManager" type="Node" parent="."]
script = ExtResource( 20 )

[node name="StageRoundManager" type="Node" parent="."]
script = ExtResource( 19 )

[node name="EnemyManager" type="Node" parent="."]
script = ExtResource( 21 )

[node name="AbilityManager" type="Node" parent="."]
script = ExtResource( 22 )

[node name="InputPromptManager" type="Node" parent="."]
script = ExtResource( 23 )

[node name="ShopManager" type="Node" parent="."]
script = ExtResource( 29 )

[node name="LevelManager" type="Node" parent="."]
script = ExtResource( 30 )

[node name="CombinationManager" type="Node" parent="."]
script = ExtResource( 9 )

[node name="SharedPassiveManager" type="Node" parent="."]
script = ExtResource( 13 )

[node name="GameModifiersManager" type="Node" parent="."]
script = ExtResource( 36 )

[node name="GameResultManager" type="Node" parent="."]
script = ExtResource( 33 )

[node name="GameStatsManager" type="Node" parent="."]
script = ExtResource( 41 )

[node name="BottomPanel" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="BottomPanel"]
margin_right = 960.0
margin_bottom = 100.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="HBoxContainer" type="MarginContainer" parent="BottomPanel"]
margin_right = 960.0
margin_bottom = 100.0

[node name="ColorWheelPanel" type="MarginContainer" parent="BottomPanel/HBoxContainer"]
margin_top = 50.0
margin_right = 10.0
margin_bottom = 50.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 6
custom_constants/margin_left = 10

[node name="ColorWheelGUI" parent="BottomPanel/HBoxContainer/ColorWheelPanel" instance=ExtResource( 44 )]
margin_left = 10.0
margin_right = 10.0
margin_bottom = 0.0

[node name="VBoxContainer" type="VBoxContainer" parent="BottomPanel/HBoxContainer"]
margin_left = 104.0
margin_right = 855.0
margin_bottom = 100.0
mouse_filter = 2
size_flags_horizontal = 6
custom_constants/separation = 0

[node name="GeneralStatsPanel" parent="BottomPanel/HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_right = 751.0

[node name="HBoxContainer" type="HBoxContainer" parent="BottomPanel/HBoxContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 751.0
margin_bottom = 100.0
mouse_filter = 2
size_flags_vertical = 10
custom_constants/separation = 20

[node name="InnerBottomPanel" type="MarginContainer" parent="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 751.0
margin_bottom = 81.0
mouse_filter = 2
custom_constants/margin_top = 1
script = ExtResource( 15 )

[node name="BuySellLevelRollPanel" parent="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel" instance=ExtResource( 4 )]
margin_top = 1.0
margin_right = 751.0
margin_bottom = 81.0
mouse_filter = 0

[node name="SellPanel" parent="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel" instance=ExtResource( 17 )]
margin_top = 1.0
margin_right = 751.0
margin_bottom = 81.0

[node name="IngredientModeNotification" type="MarginContainer" parent="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel"]
margin_top = 1.0
margin_right = 751.0
margin_bottom = 81.0

[node name="Background" type="TextureRect" parent="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel/IngredientModeNotification"]
margin_right = 751.0
margin_bottom = 80.0
mouse_filter = 2
texture = ExtResource( 14 )

[node name="Marginer" type="MarginContainer" parent="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel/IngredientModeNotification"]
margin_right = 751.0
margin_bottom = 80.0
mouse_filter = 2
custom_constants/margin_top = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel/IngredientModeNotification/Marginer"]
margin_top = 15.0
margin_right = 751.0
margin_bottom = 65.0
mouse_filter = 2
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel/IngredientModeNotification/Marginer/VBoxContainer"]
margin_left = 186.0
margin_right = 565.0
margin_bottom = 25.0
mouse_filter = 2
size_flags_horizontal = 6
custom_constants/separation = 20

[node name="TextureRect2" type="TextureRect" parent="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel/IngredientModeNotification/Marginer/VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 25.0
mouse_filter = 2
texture = ExtResource( 42 )

[node name="IngredientModeTitle" type="Label" parent="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel/IngredientModeNotification/Marginer/VBoxContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 339.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
text = "Absorb Ingredients Mode"
align = 1

[node name="TextureRect" type="TextureRect" parent="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel/IngredientModeNotification/Marginer/VBoxContainer/HBoxContainer"]
margin_left = 359.0
margin_right = 379.0
margin_bottom = 25.0
mouse_filter = 2
texture = ExtResource( 42 )

[node name="Label2" type="Label" parent="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel/IngredientModeNotification/Marginer/VBoxContainer"]
margin_top = 35.0
margin_right = 751.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 2 )
text = "Drag towers to receipient to buff the receiving tower"
align = 1

[node name="SynergyInteractablePanel" parent="BottomPanel/HBoxContainer" instance=ExtResource( 26 )]
visible = false
margin_left = 865.0
margin_top = 16.0
margin_right = 960.0
margin_bottom = 84.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 10
size_flags_vertical = 6
custom_constants/margin_right = 10

[node name="AlmanacButtonPanel" parent="BottomPanel/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 885.0
margin_top = 32.0
margin_right = 960.0
margin_bottom = 68.0
size_flags_horizontal = 10
size_flags_vertical = 6
custom_constants/margin_right = 27

[node name="RightSidePanel" parent="." instance=ExtResource( 16 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_right = 0.0
margin_bottom = 440.0

[node name="LeftsidePanel" parent="." instance=ExtResource( 11 )]
mouse_filter = 0

[node name="CombinationTopPanel" parent="." instance=ExtResource( 10 )]
margin_left = 94.0
margin_right = 840.0
margin_bottom = 32.0

[node name="NotificationNode" type="Node" parent="."]

[node name="SelectionNotifPanel" parent="NotificationNode" instance=ExtResource( 24 )]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -217.0
margin_right = 0.0
margin_bottom = -160.0

[node name="TowerEmptySlotNotifPanel" parent="NotificationNode" instance=ExtResource( 31 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -138.0
margin_right = 82.0
margin_bottom = -69.0

[node name="GenericNotifPanel" parent="NotificationNode" instance=ExtResource( 34 )]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -217.0
margin_right = 1.00006
margin_bottom = -160.0
grow_horizontal = 2
grow_vertical = 0

[node name="BelowScreenEffectsNodeHoster" type="Node" parent="."]
script = ExtResource( 40 )

[node name="TutorialNotifPanel" parent="." instance=ExtResource( 37 )]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = -200.0
margin_right = -127.0
margin_bottom = -160.0
grow_horizontal = 2
grow_vertical = 0

[node name="ScreenEffectsManager" type="Node" parent="."]
script = ExtResource( 25 )

[node name="EffectsHolder" type="Node2D" parent="ScreenEffectsManager"]

[node name="WholeScreenGUI" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 27 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TopLeft" type="Position2D" parent="."]
position = Vector2( 94, 36 )

[node name="BottomRight" type="Position2D" parent="."]
position = Vector2( 840, 380 )

[node name="PauseManager" parent="." instance=ExtResource( 35 )]

[node name="ProjHoster" type="Node" parent="."]
script = ExtResource( 39 )

[node name="OtherNodeHoster" type="Node" parent="."]
script = ExtResource( 38 )

[connection signal="color_wheel_left_mouse_released" from="BottomPanel/HBoxContainer/ColorWheelPanel/ColorWheelGUI" to="." method="_on_ColorWheelGUI_color_wheel_left_mouse_released"]
[connection signal="level_up" from="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel/BuySellLevelRollPanel" to="." method="_on_BuySellLevelRollPanel_level_up"]
[connection signal="reroll" from="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel/BuySellLevelRollPanel" to="." method="_on_BuySellLevelRollPanel_reroll"]
[connection signal="tower_bought" from="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel/BuySellLevelRollPanel" to="." method="_on_BuySellLevelRollPanel_tower_bought"]
[connection signal="gui_input" from="WholeScreenGUI" to="." method="_on_WholeScreenGUI_gui_input"]
